chore: 组织单元选择

--- a/projects/web/src/app/admin/organize-units/detail/detail.component.html
+++ b/projects/web/src/app/admin/organize-units/detail/detail.component.html
@@ -19,7 +19,7 @@
       <nz-form-control>
         <nz-tree-select class="w-100" id="parentId" name="parentId" nzSize="large"
           [(ngModel)]="model.parentId"
-          nzPlaceHolder="请选择上级组织单元">
+          nzPlaceHolder="请选择上级组织单元" [nzNodes]="treeNodes" nzShowSearch>
         </nz-tree-select>
       </nz-form-control>
     </nz-form-item>
@@ -39,11 +39,11 @@
       <div nz-col nzFlex="1">
         <nz-form-item>
           <nz-form-label nzRequired nzFor="name">名称</nz-form-label>
-          <nz-form-control>
+          <nz-form-control nzHasFeedback>
             <input nz-input nzSize="large" type="text" id="name" name="name"
               placeholder="请输入组织单元名称 ..." required
               [disabled]="!editable"
-              [(ngModel)]="model.code"
+              [(ngModel)]="model.name"
             />
           </nz-form-control>
         </nz-form-item>
@@ -51,7 +51,7 @@
       <div nz-col>
         <nz-form-item>
           <nz-form-label nzRequired nzFor="sequence">排序</nz-form-label>
-          <nz-form-control>
+          <nz-form-control nzHasFeedback>
             <nz-input-number nzSize="large" type="number" id="sequence" name="sequence"
               nzPlaceHolder="请输入排序..." required
               [disabled]="!editable"
