--- a/projects/web/src/app/admin/organize-units/list/list.component.html
+++ b/projects/web/src/app/admin/organize-units/list/list.component.html
@@ -29,41 +29,9 @@
             </button>
           </div>
         </div>
-        <form class="p-2 bg-light">
+        <!-- <form class="p-2 bg-light">
           <div class="row">
             <div class="col-6">
-              <div class="row g-0 align-items-center">
-                <label
-                  for="pageSize"
-                  class="col-auto col-form-label col-form-label-sm"
-                >
-                  显示：
-                </label>
-                <div class="col-auto">
-                  <select
-                    id="pageSize"
-                    name="pageSize"
-                    class="form-select form-select-sm"
-                    [(ngModel)]="vm.searchModel.take"
-                    (change)="vm.onPageSizeChange()"
-                  >
-                    <option [value]="10">10</option>
-                    <option [value]="25">25</option>
-                    <option [value]="50">50</option>
-                    <option [value]="100">100</option>
-                  </select>
-                </div>
-                <div class="col-auto text-muted px-2 py-1">条记录</div>
-                <div class="col-auto text-muted px-2">
-                  <ng-container *ngIf="vm.loading">
-                    <svg-icon
-                      path="bi/arrow-repeat"
-                      iconClass="bi-spin"
-                    ></svg-icon>
-                    加载中...
-                  </ng-container>
-                </div>
-              </div>
             </div>
             <div class="col-6">
               <div class="row g-0">
@@ -76,14 +44,14 @@
               </div>
             </div>
           </div>
-        </form>
-        <div class="table-responsive">
+        </form> -->
+        <div class="table-responsive p-2">
           <nz-table
             #expandTable
             [nzData]="listData"
-            nzTableLayout="fixed"
-            nzShowPagination="false"
+            [nzShowPagination]="false"
             nzSize="small"
+            [nzPageSize]="listData.length"
           >
             <thead>
               <tr>
@@ -101,7 +69,7 @@
                     [nzIndentSize]="item.level! * 20"
                     [nzShowExpand]="item.children && item.children.length > 0"
                     [nzExpand]="item.expand"
-                    (nzExpandChange)="collapse(item)"
+                    (nzExpandChange)="expandChange(item)"
                   >
                     {{ item.code }}
                   </td>
@@ -149,36 +117,6 @@
               </ng-container>
             </tbody>
           </nz-table>
-        </div>
-        <div class="card-footer">
-          <div *ngIf="vm.data | async as data" class="row g-0">
-            <div class="col-6 d-flex align-items-center">
-              <div [class]="data.length > 0 ? 'text-muted' : 'text-warning'">
-                <ng-container *ngIf="data.length > 0; else emptyTpl">
-                  显示 {{ vm.total | async }} 条记录中的第
-                  {{ vm.searchModel.skip + 1 }} 至
-                  {{ vm.searchModel.skip + data.length }} 条
-                </ng-container>
-                <ng-template #emptyTpl>无数据！</ng-template>
-              </div>
-            </div>
-            <div class="col-6">
-              <ngb-pagination
-                class="d-flex justify-content-end"
-                *ngIf="vm.showPagination"
-                size="sm"
-                [collectionSize]="(vm.total | async) || 0"
-                [page]="vm.searchModel.skip / vm.searchModel.take + 1"
-                [pageSize]="vm.searchModel.take"
-                [maxSize]="5"
-                [rotate]="true"
-                [boundaryLinks]="true"
-                [ellipses]="true"
-                (pageChange)="vm.onPageChange($event)"
-              >
-              </ngb-pagination>
-            </div>
-          </div>
         </div>
       </div>
     </div>
