--- a/projects/web/src/styles.css
+++ b/projects/web/src/styles.css
@@ -47,6 +47,11 @@
   to { transform: rotate(1turn); }
 }
 
+/* disable caret */
+.dropdown-toggle::after {
+  display: none !important;
+}
+
 html, body {
   width: 100%; height: 100%;
   margin: 0; padding: 0;
