--- a/projects/web/src/app/admin/users/detail/detail.component.html
+++ b/projects/web/src/app/admin/users/detail/detail.component.html
@@ -57,7 +57,7 @@
         <nz-form-item>
           <nz-form-label nzRequired nzFor="organizeUnit.id">组织单元</nz-form-label>
           <nz-form-control nzHasFeedback>
-            <nz-tree-select class="w-100" id="organizeUnit.id" name="organizeUnit.id" nzSize="large" nzPlaceHolder="请选择组织单元" required  [nzDisabled]="!editable" [nzNodes]="treeNodes" [(ngModel)]="model.organizeUnit!.id"></nz-tree-select>
+            <nz-tree-select class="w-100" id="organizeUnit.id" name="organizeUnit.id" nzSize="large" nzPlaceHolder="请选择组织单元" required  [nzDisabled]="!editable" [nzNodes]="treeNodes" [(ngModel)]="model.organizeUnit!.id" (nzTreeClick)="onOrganizeUnitClick($event)"></nz-tree-select>
           </nz-form-control>
         </nz-form-item>
       </div>
@@ -101,7 +101,7 @@
           <nz-form-label nzRequired nzFor="dateOfBirth">出生日期</nz-form-label>
           <nz-form-control nzHasFeedback>
             <nz-date-picker class="w-100" id="dateOfBirth" name="dateOfBirth" nzSize="large"
-            nzPlaceHolder="请选择出生日期 ..." [(ngModel)]="model.dateOfBirth"
+            nzPlaceHolder="请选择出生日期 ..." [(ngModel)]="dateOfBirthDate"
             [nzDisabled]="!editable"></nz-date-picker>
             </nz-form-control>
         </nz-form-item>
