--- a/projects/web/src/app/login/login/login.component.html
+++ b/projects/web/src/app/login/login/login.component.html
@@ -1,32 +1,30 @@
 <div class="container">
   <div class="row">
     <div class="col col-login mx-auto">
-      <form class="card" #loginForm="ngForm" (submit)="login()" method="post">
-        <div class="card-body p-5">
-          <div class="card-title text-secondary">
-            登录您的账户
-          </div>
-          <div class="mb-3">
-            <label class="form-label text-muted" for="username">用户名 <i class="text-danger">*</i></label>
-            <input class="form-control" type="text" id="username" name="username"
-              placeholder="请输入用户名 ..." [(ngModel)]="model.userName"
-              [class.is-invalid]="!(username.valid || username.pristine)"
-              [class.is-valid]="username.valid"
-              required #username="ngModel" autocomplete="username" />
-          </div>
-          <div class="mb-3">
-            <label class="form-label text-muted" for="password">密码 <i class="text-danger">*</i></label>
-            <input class="form-control" type="password" name="password"
-              placeholder="请输入密码 ..." required id="password"
-              [(ngModel)]="model.password"
-              #password="ngModel"
-              [class.is-invalid]="!(password.valid || password.pristine)"
-              [class.is-valid]="password.valid"
-              autocomplete="current-password" (keyup)="passwordKeyUp($event, loginForm)" />
-          </div>
-          <div class="mb-3 d-grid gap-3">
-            <button [disabled]="(!loginForm.valid) || loading"
-              class="btn btn-outline-primary"
+      <nz-card nzTitle="登录您的账户">
+        <form nz-form nzLayout="vertical" #loginForm="ngForm" (submit)="login()" method="post">
+          <nz-form-item>
+            <nz-form-label nzFor="username" nzRequired>用户名</nz-form-label>
+            <nz-form-control >
+              <input nz-input type="text" id="username" name="username"
+                placeholder="请输入用户名 ..." [(ngModel)]="model.userName"
+                required autocomplete="username"
+              />
+            </nz-form-control>
+          </nz-form-item>
+          <nz-form-item>
+            <nz-form-label nzFor="password" nzRequired>密码</nz-form-label>
+            <nz-form-control>
+              <input nz-input type="password" name="password"
+                placeholder="请输入密码 ..." required id="password"
+                [(ngModel)]="model.password"
+                autocomplete="current-password"
+                (keyup)="passwordKeyUp($event, loginForm)"
+              />
+            </nz-form-control>
+          </nz-form-item>
+          <nz-form-item>
+            <button nz-button nzType="primary" [disabled]="(!loginForm.valid) || loading"
               type="button" (click)="login()">
               <ng-container *ngIf="loading; else loginTpl;">
                 <svg-icon path="bi/arrow-repeat" iconClass="bi-spin"></svg-icon> 登录中 ...
@@ -35,13 +33,14 @@
                 登录
               </ng-template>
             </button>
-          </div>
-          <ngb-alert type="danger" *ngIf="(message | async) as msg"
-            (closed)="clearMessage()">
-            {{ msg }}
-          </ngb-alert>
-        </div>
-      </form>
+          </nz-form-item>
+          <nz-alert nzType="error" *ngIf="(message | async) as msg"
+            [nzCloseable]="true" (nzOnClose)="clearMessage()"
+            [nzShowIcon]="true"
+            [nzMessage]="msg">
+          </nz-alert>
+        </form>
+      </nz-card>
     </div>
   </div>
 </div>
