--- a/projects/web/src/app/admin/users/list/list.component.html
+++ b/projects/web/src/app/admin/users/list/list.component.html
@@ -71,7 +71,7 @@
                 <div class="col">
                   <select class="form-select form-select-sm" name="roleName"
                     [(ngModel)]="vm.searchModel.roleName" (change)="research()">
-                    <option value="">全部用户 ({{ getUserCount() }})</option>
+                    <option value="">全部用户</option>
                     <option *ngFor="let r of vm.roles | async" [value]="r.name">
                       {{r.description || r.name}} ({{r.userCount}})
                     </option>
