--- a/projects/web/src/app/admin/users/list/list.component.html
+++ b/projects/web/src/app/admin/users/list/list.component.html
@@ -18,8 +18,8 @@
                 </button>
               </div>
           </div>
-          <div *ngIf="(organizeUnitSvc.treeNodes | async) as nzTreeNodes">
-            <nz-tree [nzData]="nzTreeNodes" (nzClick)="onOrganizeUnitClick($event)"></nz-tree>
+          <div *ngIf="(organizeUnitSvc.treeNodes | async) as treeNodes">
+            <nz-tree [nzData]="treeNodes" (nzClick)="onOrganizeUnitClick($event)"></nz-tree>
           </div>
       </div>
     </div>
